changement radical palette, ui

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <div style="height: 100vh;" id="root"></div>
+  <div class="bg-black" style="height: 100vh;background-color: black;" id="root"></div>
 </body>
 
 </html>
