--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,8 @@
   <title>Pop corne</title>
 </head>
 
-<body>
-  <div class="bg-black" style="height: 100vh;background-color: black;" id="root"></div>
+<body style="padding: 0 ;background-color: black; ">
+  <div class="bg-black" style="height: 100vh;background-color: black; padding: 0;" id="root"></div>
 </body>
 
 </html>
