change ui , connect with locale storage

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body style="padding: 0 ;background-color: black; ">
-  <div class="bg-black" style="height: 100vh;background-color: black; padding: 0;" id="root"></div>
+  <div class="bg-black" style="height: 100vh; padding: 0;" id="root"></div>
 </body>
 
 </html>
